# tinychain

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  README_ZH.md  build.rs  config-template.toml  genesis.json
.github/workflows/: build.yml
db/database/: block.db  genesis.json
db/keystore/: 16d5e01e-709a-4536-a4f2-9f069070c51a  2bde5a91-6411-46ba-9173-c3e075d32100  346b4cd8-10b6-47ba-a091-6a57bb1afcf9  3d211869-2505-4394-bd99-0c76eb761bf9  db  snap.000000000000015C
doc/: 01-architecture.md  01-main-wallet-structs.md  02-init-project.md  02-syncer-miner-server.md  03-data-structure-api.md  04-wallet.md  05-cmd-config.md  06-libp2p.md  07-tinyp2p.md  08-network.md  09-biz.md  10-data.md  14-end.md  config-boot.toml  config1.toml  config2.toml  office-hour-1.md  office-hour-2.md
doc/conf/: config-boot.toml  config1.toml  config2.toml
doc/en/: 01-architecture.md  02-init-project.md  03-data-structure-api.md  04-wallet.md  05-cmd-config.md  06-libp2p.md  07-tinyp2p.md  08-network.md  09-biz.md  10-data.md
doc/zh/: 01-architecture.md  02-init-project.md  03-data-structure-api.md  04-wallet.md  05-cmd-config.md  06-libp2p.md  07-tinyp2p.md  08-network.md  09-biz.md  10-data.md
docs/: 01-architecture.md  02-init-project.md  CNAME
docs/conf/: config2.toml
src/: config.rs  error.rs  main.rs  types.rs  utils.rs
src/biz/: event_handler.rs  genesis.rs  miner.rs  mod.rs  node.rs  peer.rs  peer_client.rs  state.rs  syncer.rs
src/data/: http_peer.rs  memory_state.rs  mod.rs  sled_state.rs
src/data/file_state/: genesis.rs  mod.rs
src/database/: block.rs  genesis.rs  mod.rs  state.rs  tx.rs
src/network/: http.rs  mock_p2p.rs  mod.rs  p2p.rs
src/network/http/: dto.rs  mod.rs
src/network/schema/: api.v1.proto  mod.rs  v1.rs
src/node/: block.rs  error.rs  event_handler.rs  miner.rs  mod.rs  node.rs  peer.rs  router.rs  state.rs  syncer.rs  temp.rs  tx.rs
src/schema/: api.v1.proto  block.rs  mod.rs  req_resp.rs  tx.rs  v1.rs
src/server/: mod.rs  router.rs
src/state/: mod.rs  sled_state.rs
src/state/file_state/: genesis.rs  mod.rs
src/types/: hash.rs  mod.rs  pubsub_topic.rs
src/utils/: mod.rs
src/wallet/: mod.rs
tinyp2p/: Cargo.toml
tinyp2p/examples/: main.rs
tinyp2p/src/: config.rs  error.rs  lib.rs  service.rs  transport.rs
tinyp2p/src/behaviour/: discovery.rs  mod.rs  req_resp.rs
tinyp2p/src/protocol/: mod.rs
wallet/: Cargo.toml
wallet/src/: error.rs  lib.rs  signature.rs
wallet/src/types/: address.rs  mod.rs  signature.rs
