# Workspace -------------------------------

[workspace]

members = ["wallet", "tinyp2p"]

[workspace.dependencies]
thiserror = "1.0"
log = "0.4"
pretty_env_logger = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.28", features = ["full"] }
sled = "0.34"
hex = "0.4"

# Root Crate ----------------------------

[package]

name = "tinychain"
version = "1.0.0"
edition = "2021"


[dependencies]
wallet = { version = "1.0.0", path = "wallet" }
tinyp2p = { version = "1.0.0", path = "tinyp2p" }

thiserror.workspace = true
log.workspace = true
pretty_env_logger.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
sled.workspace = true
hex.workspace = true

crossbeam-channel = "0.5"
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
clap = { version = "4.3", features = ["derive"] }
toml = "0.7"
dashmap = "5.4"
axum = { version = "0.6", features = ["default", "macros"] }
rand = "0.8"
prost = "0.11"

[build-dependencies]
prost-build = "0.11"

[dev-dependencies]
tempfile = "3.6"
project-root = "0.2"
