[package]
name = "tinyp2p"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
log.workspace = true

libp2p = { version = "0.52", features = [
    "tcp",
    "tokio",
    "noise",
    "yamux",
    "ping",
    "identify",
    "kad",
    "request-response",
    "gossipsub",
    "macros",
] }
either = "1.8"
itertools = "0.11"
async-trait = "0.1"
void = "1.0"
bs58 = "0.5"
ip_network = "0.4"
unsigned-varint = { version = "0.7", features = [
    "futures",
    "asynchronous_codec",
] }

[dev-dependencies]
pretty_env_logger.workspace = true
