[package]
name = "wallet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror.workspace = true
once_cell.workspace = true

ethers-core = "2.0"
ethers-signers = "2.0"

[dev-dependencies]
tempfile.workspace = true
