[package]
name = "wallet"
version.workspace = true
authors = ["Jacob Chia <jacob-chia@outlook.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
k256 = { version = "0.13", features = ["ecdsa"] }
rand_core = { version = "0.6", features = ["getrandom"] }
sha3 = "0.10"

hex.workspace = true
sled.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
hex-literal = "0.4"
tempfile = "3.6"
